# tuya2mqtt

./: .gitignore  README.add.ko.md  README.add.md  README.ko.md  README.md  pyproject.toml  tuya2mqtt.py
core/: tuya2mqtt.py
examples/: README.md  add_devices.py  device_manager_pyscript
examples/pyscript/: README.md  tuya2mqtt_daemon.py  tuya2mqtt_devmanager.py  tuya2mqtt_ha_bridge.py
examples/pyscript/modules/: tuya2mqtt_customization.py
frontend/: Dockerfile  README.md  requirements.txt  tuya2mqtt_ui.py
tuya2mqtt/: Dockerfile  __init__.py  __main__.py  requirements.txt  tuya2mqtt.py
