[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tuya2mqtt"
version = "1.0.2"
description = "Tuya Devices to MQTT Bridge"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "paho-mqtt",
    "python-daemon",
    "tinytuya"
]

[project.urls]
Homepage = "https://github.com/3735943886/tuya2mqtt"

[tool.setuptools]
packages = ["tuya2mqtt"]

[project.scripts]
tuya2mqtt = "tuya2mqtt.tuya2mqtt:main"
